# TrackerProfilingAndroidGithub

TrackerProfilingAndroid/app/: CMakeLists.txt  aaaaaa.jks  build.gradle
TrackerProfilingAndroid/app/libs/include/arcsoft/: amcomdef.h  arcsoft_spotlight.h  asvloffscreen.h  merror.h
TrackerProfilingAndroid/app/libs/include/self/: FaceTracker.h
TrackerProfilingAndroid/app/src/androidTest/java/appmagics/trackerprofilingandroid/: ExampleInstrumentedTest.java
TrackerProfilingAndroid/app/src/main/: AndroidManifest.xml
TrackerProfilingAndroid/app/src/main/assets/facepp/: megviifacepp_0_4_7_model
TrackerProfilingAndroid/app/src/main/assets/self/: cascade_0511.xml  clm_ccnf_mpie.txt  main_clnf_multi_pie.txt
TrackerProfilingAndroid/app/src/main/cpp/: AndroidSysInfo.cpp  AndroidSysInfo.h  native-lib.cpp
TrackerProfilingAndroid/app/src/main/java/appmagics/trackerprofilingandroid/: MainActivity.java  Tracker.java
TrackerProfilingAndroid/app/src/main/res/layout/: activity_main.xml
TrackerProfilingAndroid/app/src/main/res/values/: strings.xml  styles.xml
TrackerProfilingAndroid/app/src/test/java/appmagics/trackerprofilingandroid/: ExampleUnitTest.java
TrackerProfilingAndroid/gradle/wrapper/: gradle-wrapper.properties
